# netbox-crowdstrike-sync

./: README.md  config.py  cs_exposure.py  cs_sync.py  netbox_client.py  pyproject.toml  requirements.txt
netbox_crowdstrike_sync/: __init__.py  choices.py  filtersets.py  navigation.py  urls.py
netbox_crowdstrike_sync/forms/: forms.py
netbox_crowdstrike_sync/migrations/: 0001_initial.py
netbox_crowdstrike_sync/models/: sync_log.py
netbox_crowdstrike_sync/tables/: tables.py
netbox_crowdstrike_sync/templates/netbox_crowdstrike_sync/: synclog.html  synclog_list.html
netbox_crowdstrike_sync/views/: sync_log.py
