[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-crowdstrike-sync"
version = "0.1.0"
description = "NetBox plugin to synchronise CrowdStrike Falcon hosts into NetBox"
requires-python = ">=3.10"
dependencies = [
    "crowdstrike-falconpy>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_crowdstrike_sync*"]
